--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 
 
-    <title>Finans - financas pessoais</title>
+    <title>Finans - Finanças pessoais</title>
 </head>
 
 <body>
@@ -41,10 +41,10 @@
                             <a href="" class="nav-link">Recursos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">Beneficios</a>
+                            <a href="" class="nav-link">Benefícios</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">Precos</a>
+                            <a href="" class="nav-link">Preços</a>
                         </li>
                         <li class="nav-item">
                             <a href="" class="btn btn-outline-light ml-4">Entrar</a>
@@ -66,7 +66,7 @@
                     <div class="align-self-center">
                         <h1 class="display-4"> Suas contas, descomplicadas</h1>
                         <p>
-                            Usado por mais de 1 milhao de pessoas, o Finans e uma ferramenta online que vai facilitar sua vida financeira.
+                            Usado por mais de 1 milhão de pessoas, o Finans e uma ferramenta online que vai facilitar sua vida financeira.
                         </p>
 
                         <form class="mt-4 mb-4">
@@ -77,7 +77,7 @@
                                 </div>
                             </div>
                         </form>
-                        <p>Disponivel para
+                        <p>Disponível para
                             <a href="" class="btn btn-outline-light">
                                 <i class="fab fa-android fa-lg"></i>
                             </a>
@@ -107,7 +107,7 @@
                             Saiba para onde vai o seu dinheiro
                         </h2>
                         <p>
-                            Com o Finans, voce categoriza todos os seus lancamentos. Com graficos simples, voce sabe de onde vem e para onde vai o seu dinheiro.
+                            Com o Finans, voce categoriza todos os seus lançamentos. Com gráficos simples, você sabe de onde vem e para onde vai o seu dinheiro.
                         </p>
                         <a href="" class="btn btn-primary">Veja mais</a>
                     </div>
@@ -134,7 +134,7 @@
                             Pare de pagar juros e economize
                         </h2>
                         <p>
-                            Manter as contas em dia e sempre um problema? O Finans avisa voce: receba alertas de contas a pagar e a receber!
+                            Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas a pagar e a receber!
                         </p>
                         <a href="" class="btn btn-primary">Veja mais</a>
                     </div>
@@ -152,21 +152,21 @@
                     <img src="img/facil.png" class="img-fluid">
                     <h4>Facil de usar</h4>
                     <p>
-                        O Finans vai alem do basico e permite que voce faca controles incriveis, essenciais para suas financas. Simples como tem que ser!
+                        O Finans vai alem do básico e permite que você faça controles incríveis, essenciais para suas financas. Simples como tem que ser!
                     </p>
                 </div>
                 <div class="col-md-4">
                     <img src="img/economize.png" class="img-fluid">
                     <h4>Economize seu tempo</h4>
                     <p>
-                        Tempo e dinheiro! Em segundos, voce tem tudo sob controle e aproveite seu tempo com o que realmente importa pra voce!
+                        Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa pra você!
                     </p>
                 </div>
                 <div class="col-md-4">
                     <img src="img/suporte.png" class="img-fluid">
                     <h4>Suporte amigo</h4>
                     <p>
-                        Duvidas? Perguntas? Nosso suporte super legal ajuda voce! A gente ta aqui para resolver seus problemas e deixar sua vida bem mais facil!
+                        Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui para resolver seus problemas e deixar sua vida bem mais fácil!
                     </p>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                     <p>
                         <a href="">Home</a>
                         <a href="">Recursos</a>
-                        <a href="">Beneficios</a>
+                        <a href="">Benefícios</a>
                         <a href="">Preco</a>
                     </p>
                 </div>
